UserDao : @Cleanup 처리 User : Lombok 애노테이션 정리 UserDaoTest : main 메서드 -> JUnit 테스트로 변경 README.md : 테스트 관련 내용 추가

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,15 @@
             <version>2.1_3</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.junit/com.springsource.org.junit -->
+        <dependency>
+            <groupId>org.junit</groupId>
+            <artifactId>com.springsource.org.junit</artifactId>
+            <version>4.7.0</version>
+            <scope>test</scope>
+        </dependency>
+
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
